--- a/css/carousel.css
+++ b/css/carousel.css
@@ -43,6 +43,10 @@ a:hover{
   color: rgb(212, 219, 225);
 }
 
+ul {
+  color: rgb(212, 219, 225);
+}
+
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
